# Universal-Robots-ROS2-CEEO

./: .gitignore  Gripper_Node.py  Gripper_Publisher.py  Intro_to_MyUR3e.ipynb  JTCCLient_code.py  MyUR3e.py  MyUR3e_backup.py  README.md  TrajectoryPlanner.py  URTP.md  URTeachPendant.md  Writing_the_Secret_Message.ipynb  coneQuaternions.py  launch.py  makeCircle.py  move_UR.py  package.xml  pyproject.toml  robotiq_gripper.py  secret_message.py  setup.py  sub_node.py  test_move.py  urceeo.py
examples/: Arm_Excercises.ipynb  Guided_EE.py  Hand_Mirroring.ipynb  In_Depth_Tutorial.ipynb  Ping_Pong.py  Portrait_Drawing.ipynb  Stack_Blocks.ipynb  Writing_the_Secret_Message.ipynb  cake_froster.py  portrait_drawing.ipynb  secret_message.py
examples/Cake_Froster/: cake_froster.ipynb  cake_froster_trajectories.json
examples/ROS_Templates/: publisher.ipynb
examples/final_cake_froster/.ipynb_checkpoints/: cake_froster-checkpoint.ipynb  trajectory_dictionary-checkpoint.json
examples/pure_ros/: Action_Server_Node.py
examples/ros templates/: jtc_action_client.ipynb  subscriber.ipynb
exercises/: Intro_to_MyUR3e.ipynb  Writing_the_Secret_Message.ipynb
ik_solver/: README.md  README.txt  ur3e_ikfast.cpp  ur_kinematics.py
myur/: Gripper_Node.py  __init__.py  launch_ur.py  mqtt_forwarder.py  myur3e.py  robotiq_gripper.py  sub_node.py  trajectory_planner.py
myur/ik_solver/: README.md  ur_kinematics.py
pure_ros/: Brain_Node.py  README.md
urdf/: robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper.urdf.xacro~  robotiq_hande_gripper.xacro  robotiq_hande_gripper.xacro~  ur3e_robotiq_handE_urdf.xacro  ur3e_robotiq_handE_urdf.xacro~  ur3e_urdf.xacro
