<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>universal_robots_ros2_ceeo</name>
  <version>0.0.0</version>
  <description>Package for using the UR3 with Hand-E Robotiq Gripper</description>
  <maintainer email="kat.allen@tufts.edu">Kat Allen</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotiq_hande_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
